--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -31,6 +31,15 @@
     --accent-green: 0 184 122;
   }
 
+  ::-webkit-scrollbar-track {
+    border-radius: 9999px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 9999px;
+    border-width: 1px;
+  }
+
   a,
   input,
   button,
