--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -42,3 +42,76 @@
   font-style: 'normal';
   font-display: 'swap';
 }
+
+
+@font-face {
+  font-family: "Dongle";
+  font-weight: 300;
+  src: url("/fonts/Dongle-Light.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Dongle";
+  font-weight: 400;
+  src: url("/fonts/Dongle-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Dongle";
+  font-weight: 700;
+  src: url("/fonts/Dongle-Bold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-weight: 100;
+  src: url("/fonts/Pretendard-Thin.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-weight: 200;
+  src: url("/fonts/Pretendard-ExtraLight.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-weight: 300;
+  src: url("/fonts/Pretendard-Light.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-weight: 400;
+  src: url("/fonts/Pretendard-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-weight: 500;
+  src: url("/fonts/Pretendard-Medium.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-weight: 600;
+  src: url("/fonts/Pretendard-SemiBold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-weight: 700;
+  src: url("/fonts/Pretendard-Bold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-weight: 800;
+  src: url("/fonts/Pretendard-ExtraBold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-weight: 900;
+  src: url("/fonts/Pretendard-Black.ttf") format("truetype");
+}
